fix: styles for word wrapping and element display

--- a/src/app/pages/post/post.component.css
+++ b/src/app/pages/post/post.component.css
@@ -30,6 +30,7 @@
     margin-top: 0.7rem;
     font-size: 0.95em;
     cursor: pointer;
+    display: inline-block;
 }
 
 .post__tools>*:not(:last-child) {
