--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,8 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Montserrat';
+  word-break: break-word;
+  hyphens: auto;
 }
 
 body {
